# crispy-forms-propeller

./: .gitignore  .travis.yml  MANIFEST.in  README.md  crispy-forms-propeller.sublime-workspace  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.github/: dependabot.yml
crispy_forms_propeller/: __init__.py  forms.py  settings.py
crispy_forms_propeller/layout/: __init__.py  base.py
crispy_forms_propeller/templates/propeller/: field.html  inputs.html
crispy_forms_propeller/templatetags/: crispy_forms_propeller_field.py
docs/: conf.py  requirements.txt
