[tool.poetry]
name = "crispy-forms-propeller"
version = "0.0.2a11"
description = "Django application to add 'django-crispy-forms' layout objects for 'Propeller.in'"
authors = ["Adam Radestock <raddishiow@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3"
django-cripsy-forms = "^1.8.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
